# MeetWiki

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  menu.cmd  menu.py  pyproject.toml  requirements.txt  run.bat
.github/: copilot-instructions.md
.github/skills/docs-review/: SKILL.md
.github/skills/meetwiki-actions/: SKILL.md
.github/skills/meetwiki-ask/: SKILL.md
.github/skills/meetwiki-digest/: SKILL.md
.github/skills/meetwiki-index/: SKILL.md
.github/skills/meetwiki-ingest/: SKILL.md
.github/skills/meetwiki-kanban/: SKILL.md
.github/skills/meetwiki-manual/: SKILL.md
.github/skills/meetwiki-search/: SKILL.md
.github/skills/meetwiki-summarize/: SKILL.md
.github/skills/meetwiki-update/: SKILL.md
.github/skills/project-review/: SKILL.md
.github/workflows/: ci.yml  lint.yml
docs/: README.md  architecture.md  faq.md  local-llm-benchmark.md  setup.md  usage.md  vscode-markdown-plugins.md
scripts/: gemini_notes_downloader.py  meetwiki_actions.py  meetwiki_ask.py  meetwiki_common.py  meetwiki_digest.py  meetwiki_index.py  meetwiki_ingest.py  meetwiki_kanban.py  meetwiki_summarize.py  meetwiki_update.py  schedule_task.bat  setup.bat  setup_obsidian.bat  setup_obsidian.ps1
tests/: test_integration.py  test_manual_notes.py  test_pure_functions.py
